[package]
name = "vulkano-sdl2"
version = "0.0.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
repository = "https://github.com/dariost/vulkano-sdl2"
description = "Bridge between vulkano and sdl2"
license = "Apache-2.0"
categories = ["rendering::graphics-api"]

[lib]
name = "vulkano_sdl2"

[dependencies]
vulkano = "0.6"
sdl2 = { git = "https://github.com/dariost/rust-sdl2.git", features = ["use-bindgen", "use-pkgconfig"] }

[dev-dependencies]
vulkano-shader-derive = "0.6"
